# toolbox

./: .gitignore  Cargo.toml
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/fileop/: Cargo.toml
crates/fileop/src/: main.rs
crates/qbitop/: Cargo.toml  name.torrent
crates/qbitop/src/: main.rs
crates/toolbox/: Cargo.toml
src/: app.rs  lib.rs  main.rs  ui.rs
