[package]
name = "tools"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"
members = ["crates/*"]
[workspace.dependencies]
clap = "4.5.7"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
eyre = "0.6.12"
qbit-rs = "0.4.2"
reqwest = "0.12.4"
tokio = "1.38.0"
bytes = "1.6.0"
serde = { version = "1.0.203" }
bincode = "1.3.3"

[dependencies]
toolbox = { path = "crates/toolbox" }
bincode.workspace = true