[package]
name = "toolbox"
version = "0.1.0"
edition = "2021"
default-run = "toolbox"
[workspace]
resolver = "2"
members = ["crates/*"]
[workspace.dependencies]
clap = "4.5.7"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
eyre = "0.6.12"
qbit-rs = "0.4.2"
reqwest = "0.12.4"
tokio = "1.38.0"
bytes = "1.6.0"
serde = { version = "1.0.203" }
bincode = "1.3.3"
ratatui = "0.27.0"
crossterm = "0.27.0"
derive_more = "0.99.18"
color-eyre = "0.6.3"
serde_json = "1.0.117"

[dependencies]
toolbox_core = { path = "crates/core" }
bincode.workspace = true
clap = { workspace = true, features = ["derive"] }
ratatui.workspace = true
crossterm.workspace = true
eyre.workspace = true
derive_more.workspace = true
color-eyre.workspace = true
serde_json.workspace = true
strum = "0.26.3"
strum_macros = "0.26.4"
